[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/exo.regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UI/MainMenu/Buttons/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UI/control_settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[node name="ControlSettings" type="Control"]
anchor_left = -0.00027593
anchor_right = 0.999724
anchor_bottom = 1.0
margin_top = 0.297302
margin_bottom = 0.297363
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 435.0
margin_top = 279.0
margin_right = -435.0
margin_bottom = -88.0001
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 35
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Types" type="Label" parent="Menu"]
margin_right = 1050.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "                                 Keyboard             Controller"
align = 1
valign = 1

[node name="Padding" type="Label" parent="Menu"]
margin_top = 70.0
margin_right = 1050.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="Actions" type="HBoxContainer" parent="Menu"]
margin_top = 107.0
margin_right = 1050.0
margin_bottom = 641.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 3 )

[node name="Names" type="VBoxContainer" parent="Menu/Actions"]
margin_right = 347.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 29

[node name="accelerate" type="Label" parent="Menu/Actions/Names"]
margin_right = 347.0
margin_bottom = 35.0
hint_tooltip = "Shifts the car for you"
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Accelerate:"
align = 2

[node name="brake" type="Label" parent="Menu/Actions/Names"]
margin_top = 64.0
margin_right = 347.0
margin_bottom = 99.0
hint_tooltip = "How quickly the wheels will turn in response to input"
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Brake:"
align = 2

[node name="steer_right" type="Label" parent="Menu/Actions/Names"]
margin_top = 128.0
margin_right = 347.0
margin_bottom = 163.0
hint_tooltip = "How sensitive the steering is at speed"
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Steer Right:"
align = 2

[node name="steer_left" type="Label" parent="Menu/Actions/Names"]
margin_top = 192.0
margin_right = 347.0
margin_bottom = 227.0
hint_tooltip = "How quickly the camera zooms in and out"
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Steer Left:"
align = 2

[node name="handbrake" type="Label" parent="Menu/Actions/Names"]
margin_top = 256.0
margin_right = 347.0
margin_bottom = 291.0
hint_tooltip = "How quickly the camera zooms in and out"
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Handbrake:"
align = 2

[node name="gear_up" type="Label" parent="Menu/Actions/Names"]
margin_top = 320.0
margin_right = 347.0
margin_bottom = 355.0
hint_tooltip = "How quickly the camera zooms in and out"
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Shift Up:"
align = 2

[node name="gear_down" type="Label" parent="Menu/Actions/Names"]
margin_top = 384.0
margin_right = 347.0
margin_bottom = 419.0
hint_tooltip = "How quickly the camera zooms in and out"
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Shift Down:"
align = 2

[node name="clutch" type="Label" parent="Menu/Actions/Names"]
margin_top = 448.0
margin_right = 347.0
margin_bottom = 483.0
hint_tooltip = "How quickly the camera zooms in and out"
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Clutch:"
align = 2

[node name="Keybinds" type="VBoxContainer" parent="Menu/Actions"]
margin_left = 351.0
margin_right = 698.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 3

[node name="accelerate" parent="Menu/Actions/Keybinds" instance=ExtResource( 2 )]
margin_right = 347.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "W"
script = null

[node name="brake" parent="Menu/Actions/Keybinds" instance=ExtResource( 2 )]
margin_top = 63.0
margin_right = 347.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 3 )
text = "S"
script = null

[node name="steer_right" parent="Menu/Actions/Keybinds" instance=ExtResource( 2 )]
margin_top = 126.0
margin_right = 347.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 3 )
text = "D"
script = null

[node name="steer_left" parent="Menu/Actions/Keybinds" instance=ExtResource( 2 )]
margin_top = 189.0
margin_right = 347.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 3 )
text = "A"
script = null

[node name="handbrake" parent="Menu/Actions/Keybinds" instance=ExtResource( 2 )]
margin_top = 252.0
margin_right = 347.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 3 )
text = "Space"
script = null

[node name="gear_up" parent="Menu/Actions/Keybinds" instance=ExtResource( 2 )]
margin_top = 315.0
margin_right = 347.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 3 )
text = "LMB"
script = null

[node name="gear_down" parent="Menu/Actions/Keybinds" instance=ExtResource( 2 )]
margin_top = 378.0
margin_right = 347.0
margin_bottom = 438.0
custom_fonts/font = SubResource( 3 )
text = "RMB"
script = null

[node name="clutch" parent="Menu/Actions/Keybinds" instance=ExtResource( 2 )]
margin_top = 441.0
margin_right = 347.0
margin_bottom = 501.0
custom_fonts/font = SubResource( 3 )
text = "LAlt"
script = null

[node name="JoyControls" type="VBoxContainer" parent="Menu/Actions"]
margin_left = 702.0
margin_right = 1050.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Axes" type="VBoxContainer" parent="Menu/Actions/JoyControls"]
margin_right = 348.0
margin_bottom = 249.0
custom_constants/separation = 3

[node name="accelerate" parent="Menu/Actions/JoyControls/Axes" instance=ExtResource( 2 )]
margin_right = 213.0
margin_bottom = 60.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Right Trigger"
script = null

[node name="brake" parent="Menu/Actions/JoyControls/Axes" instance=ExtResource( 2 )]
margin_top = 63.0
margin_right = 199.0
margin_bottom = 123.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Left Trigger"
script = null

[node name="steer_right" parent="Menu/Actions/JoyControls/Axes" instance=ExtResource( 2 )]
margin_top = 126.0
margin_right = 271.0
margin_bottom = 186.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "Left Stick - Right"
script = null

[node name="steer_left" parent="Menu/Actions/JoyControls/Axes" instance=ExtResource( 2 )]
margin_top = 189.0
margin_right = 257.0
margin_bottom = 249.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "Left Stick - Left"
script = null

[node name="Buttons" type="VBoxContainer" parent="Menu/Actions/JoyControls"]
margin_top = 249.0
margin_right = 348.0
margin_bottom = 498.0
custom_constants/separation = 3

[node name="handbrake" parent="Menu/Actions/JoyControls/Buttons" instance=ExtResource( 2 )]
margin_right = 327.0
margin_bottom = 60.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Bottom Face Button"
script = null

[node name="gear_up" parent="Menu/Actions/JoyControls/Buttons" instance=ExtResource( 2 )]
margin_top = 63.0
margin_right = 288.0
margin_bottom = 123.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Right Face Button"
script = null

[node name="gear_down" parent="Menu/Actions/JoyControls/Buttons" instance=ExtResource( 2 )]
margin_top = 126.0
margin_right = 274.0
margin_bottom = 186.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Left Face Button"
script = null

[node name="clutch" parent="Menu/Actions/JoyControls/Buttons" instance=ExtResource( 2 )]
margin_top = 189.0
margin_right = 209.0
margin_bottom = 249.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Left Bumper"
script = null

[node name="Back" parent="Menu" instance=ExtResource( 2 )]
margin_top = 676.0
margin_right = 1050.0
margin_bottom = 742.0
text = "Back"
scene = "res://Scenes/UI/MainMenu/SettingsScreen.tscn"

[node name="Title" type="Label" parent="."]
margin_left = 180.0
margin_top = 120.0
margin_right = 1740.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.270588 )
custom_constants/shadow_offset_y = 5
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/Actions/Keybinds/accelerate" to="Menu/Actions" method="_on_accelerate_pressed"]
[connection signal="pressed" from="Menu/Actions/Keybinds/brake" to="Menu/Actions" method="_on_brake_pressed"]
[connection signal="pressed" from="Menu/Actions/Keybinds/steer_right" to="Menu/Actions" method="_on_steer_right_pressed"]
[connection signal="pressed" from="Menu/Actions/Keybinds/steer_left" to="Menu/Actions" method="_on_steer_left_pressed"]
[connection signal="pressed" from="Menu/Actions/Keybinds/handbrake" to="Menu/Actions" method="_on_handbrake_pressed"]
[connection signal="pressed" from="Menu/Actions/Keybinds/gear_up" to="Menu/Actions" method="_on_gear_up_pressed"]
[connection signal="pressed" from="Menu/Actions/Keybinds/gear_down" to="Menu/Actions" method="_on_gear_down_pressed"]
[connection signal="pressed" from="Menu/Actions/Keybinds/clutch" to="Menu/Actions" method="_on_clutch_pressed"]
[connection signal="pressed" from="Menu/Actions/JoyControls/Axes/accelerate" to="Menu/Actions" method="_on_accelerate_joy_pressed"]
[connection signal="pressed" from="Menu/Actions/JoyControls/Axes/brake" to="Menu/Actions" method="_on_brake_joy_pressed"]
[connection signal="pressed" from="Menu/Actions/JoyControls/Buttons/handbrake" to="Menu/Actions" method="_on_handbrake_joy_pressed"]
[connection signal="pressed" from="Menu/Actions/JoyControls/Buttons/gear_up" to="Menu/Actions" method="_on_gear_up_joy_pressed"]
[connection signal="pressed" from="Menu/Actions/JoyControls/Buttons/gear_down" to="Menu/Actions" method="_on_gear_down_joy_pressed"]
[connection signal="pressed" from="Menu/Actions/JoyControls/Buttons/clutch" to="Menu/Actions" method="_on_clutch_joy_pressed"]
